fix positioning on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -14,7 +14,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-position: center;
+  background-position: 70%;
   background-size: cover;
   transform-origin: 0 0;
 }
